# 12.2_homework_skypro

./: pyproject.toml
tests/: test_arrs.py
