[tool.poetry]
name = "meeting with tests"
version = "0.1.0"
description = "tects (unittest, pytest)"
authors = ["ikachaeva <irenkachaeva@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
